# mandelbrot

./: README.md
impl/inc/: bitmap.h  mandelbrot.h
impl/src/: bitmap.cpp  fractal_creator.cpp  mandelbrot.cpp
mandelbrot/: CMakeLists.txt  README.md
mandelbrot/impl/inc/: bitmap_file_header.h  bitmap_info_header.h  fractal_creator.h  rgb.h
mandelbrot/impl/src/: CMakeLists.txt  main.cpp
